--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <marquee><h2>YES! You've heard that right, we are doing a going out of business sale! So don't wait any further, because in a few months I'll be gone and you can't get these AMAZING deals anymore! What are you waiting for? Buy these amazing products from me, Crazy Joe! I've been an RV saleman for 36 years but ever since my wife left me, I've gone into dropshipping, but I'm STILL the same Crazy Joe who you used to see on WK105! Remember when president Carter came to buy a peanut truck from me? I do. He's old now, but his peanut truck is still there, in his garage. -- We've got TV's, bags, bracelets, jackets, real gold, cash 4 gold, gold fish -- THESE DEALS ARE GOLDEN! Let me tell you, at Crazy Joe's RV Imperium, I used to sell more than just RV's, I also used to sell barbecues and barbecue related paraphernalia. YES, when my son, STEVE was born, I couldn't be happier, but my wife's boyfriend didn't appreciate me spending time with my SON, so I happened to also sell slugs and you can GUESS what happened after BUT my PAROLE OFFICER is here. -- SO I HOPE YOU BUY MY THINGS BECAUSE WE'RE GOING OUT OF BUSINESS, BYE!!!</h2></marquee>
     <div id="products"></div>
     <footer>
-        <p>heind</p>
+        <p>heind, 2024</p>
     </footer>
     <script>
         fetch("https://fakestoreapi.com/products")
